# EV-ABM

./: .gitattributes  .gitignore  Makefile  README.md  TODO.txt  generate_figs.sh  issues.txt  konspekt.txt  latex_graph.tex  lint.sh  main.ipynb  main.py  main.txt  main_gov_destroy_chargers.ipynb  main_initial_analize.ipynb  main_results.ipynb  main_results_by.ipynb  main_results_by_gov.ipynb  mrb.py  pyproject.toml  readme.md  requirements.txt  research - 快捷方式.lnk  setup.cfg
analyze/: ARFIMA.ipynb  arfima_fit.r  arfima_plot.r  buy_decisions.ipynb  car_costs.ipynb  cars_age.ipynb  cars_procfiles.ipynb  concat_data.ipynb  concat_energy_data.ipynb  energy_prices.ipynb  fake_model.py  fix_fuel_price.ipynb  res.txt  technologicall_progress.ipynb
code/: baselines.py  exp.bat  exp.sh  init_env.bat  init_env.sh  main.py  parse.py  preprocess.py  requirements.txt  train.py  utils.py
code-transformer/: exp.bat  exp.sh  requirements.txt  run.py
data/: PL_CENY_RYN_EN_20230401_20230501_20230430144015.csv  Wroclaw_params.txt  access_date.txt  cars02_05_2023_01_13.csv  chargingPoints.txt  energy_price.csv  fuel_price.csv  inf.csv  typy_aut_gus.csv  weather_airport.csv  weather_central.csv  weather_header.txt  wiek_aut_gus.csv
graphs/: macro_model.doc
model/: Cars.py  City.py  Corporations.py  Customer.py  Custormer.py  Goverment.py  Government.py  Prices.py  Society.py  Time.py  __init__.py  __main__.py  common.py  constants.py  data.json  initial_params.json
tests/: city_test.py  corporations_test.py  customer_test.py  government_test.py  price_test.py  time_test.py
(+49 files in other folders)
