[tool.poetry]
name = "magisterka"
version = "0.1.0"
description = ""
authors = ["chwilko <bartekchwilkowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^23.1.0"
isort = "^5.12.0"
networkx = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
