[tool.poetry]
name = "magisterka"
version = "0.1.0"
description = ""
authors = ["chwilko <bartekchwilkowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
pylint = "^2.17.2"
mypy = "^1.2.0"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
